Correcting LaTeX format

--- a/tensors_net/tutorials_1_contrations.ipynb
+++ b/tensors_net/tutorials_1_contrations.ipynb
@@ -691,13 +691,13 @@
     "\n",
     "Step 1. Start from the binary contraction of the minimum cost.\n",
     "\n",
-    "$\\text{cost: } (A \\times B) = d^6 \\\\$\n",
-    "$\\text{cost: } (A \\times C) = d^6 \\\\$\n",
-    "$\\text{cost: } (B \\times C) = d^7 \\\\$\n",
-    "$\\text{cost: } (B \\times E) = d^6 \\\\$\n",
-    "$\\text{cost: } (C \\times D) = d^6 \\\\$\n",
-    "$\\text{cost: } (C \\times E) = d^6 \\\\$\n",
-    "$\\text{cost: } (E \\times D) = d^5 \\\\$\n",
+    "$$\\text{cost: } (A \\times B) = d^6 \\\\$$\n",
+    "$$\\text{cost: } (A \\times C) = d^6 \\\\$$\n",
+    "$$\\text{cost: } (B \\times C) = d^7 \\\\$$\n",
+    "$$\\text{cost: } (B \\times E) = d^6 \\\\$$\n",
+    "$$\\text{cost: } (C \\times D) = d^6 \\\\$$\n",
+    "$$\\text{cost: } (C \\times E) = d^6 \\\\$$\n",
+    "$$\\text{cost: } (E \\times D) = d^5 \\\\$$\n",
     "\n",
     "So, the first choice is $(E \\times D)$.\n",
     "\n",
