--- a/tensors_net/tutorials_1_contrations.ipynb
+++ b/tensors_net/tutorials_1_contrations.ipynb
@@ -683,7 +683,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "source": [
     "## Solutions to Problem Set 1:\n",
     "\n",
@@ -691,13 +695,17 @@
     "\n",
     "Step 1. Start from the binary contraction of the minimum cost.\n",
     "\n",
-    "$$\\text{cost: } (A \\times B) = d^6 \\\\$$\n",
-    "$$\\text{cost: } (A \\times C) = d^6 \\\\$$\n",
-    "$$\\text{cost: } (B \\times C) = d^7 \\\\$$\n",
-    "$$\\text{cost: } (B \\times E) = d^6 \\\\$$\n",
-    "$$\\text{cost: } (C \\times D) = d^6 \\\\$$\n",
-    "$$\\text{cost: } (C \\times E) = d^6 \\\\$$\n",
-    "$$\\text{cost: } (E \\times D) = d^5 \\\\$$\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    \\text{cost: } (A \\times B) = d^6. \\\\ \\notag\n",
+    "    \\text{cost: } (A \\times C) = d^6. \\\\ \\notag\n",
+    "    \\text{cost: } (B \\times C) = d^7. \\\\ \\notag\n",
+    "    \\text{cost: } (B \\times E) = d^6. \\\\ \\notag\n",
+    "    \\text{cost: } (C \\times D) = d^6. \\\\ \\notag\n",
+    "    \\text{cost: } (C \\times E) = d^6. \\\\ \\notag\n",
+    "    \\text{cost: } (E \\times D) = d^5. \\\\ \\notag\n",
+    "\\end{align}\n",
+    "$$\n",
     "\n",
     "So, the first choice is $(E \\times D)$.\n",
     "\n",
